--- a/scss/main.scss
+++ b/scss/main.scss
@@ -39,7 +39,7 @@
 @import "components/timeline";
 @import "components/viewhide";
 
-@import "activities/assignment";
+// @import "activities/assignment";
 @import "activities/blog";
 @import "activities/book";
 @import "activities/choice";
@@ -62,4 +62,5 @@
 @import "pages/editor";
 @import "pages/filemanager";
 @import "pages/home";
+@import "pages/home/moodleactivityresourcelink";
 @import "pages/logs";
