--- a/scss/pages/_courseview.scss
+++ b/scss/pages/_courseview.scss
@@ -1,7 +1,7 @@
 /* Course view
    ======================== */
 
-// only grid and collapsed topics formtas are supported
+// only grid and collapsed topics formats are supported
 #page-course-view-grid,
 #page-course-view-topcoll {
   #region-main {
