--- a/scss/pages/_filemanager.scss
+++ b/scss/pages/_filemanager.scss
@@ -28,7 +28,7 @@
   .fp-viewbar {
     border: none;
     a.btn.btn-secondary {
-      margin: 0 0.25rem 0.5rem 0 !important;
+      margin: 0 0.25rem $component-margin-xs 0 !important;
     }
   }
 }
