--- a/scss/activities/_book.scss
+++ b/scss/activities/_book.scss
@@ -66,7 +66,7 @@
             margin-top: $component-margin-xs;
             margin-left: $component-margin;
             li {
-              margin-bottom: $component-margin-xs;
+              margin-bottom: $component-margin-bottom-xs;
             }
           }
         }
@@ -143,13 +143,26 @@
         font-size: 1.5rem;
         height: 2.25rem;
         margin: 0 0.375rem;
+        // inactive chapter
+        .dimmed_text {
+          color: $slate-grey;
+        }
         &.current {
           cursor: default;
-          background-color: $sea-blue;
-          border-radius: 50%;
           strong {
             min-width: 2.25rem;
             color: $white;
+            border-radius: 50%;
+            line-height: 2.25rem;
+            &:not(.dimmed_text) {
+              background-color: $sea-blue;
+            }
+            // inactive chapter
+            &.dimmed_text, .dimmed_text {
+              display: flex;
+              justify-content: center;
+              background-color: $block-header;
+            }
           }
           //for firefox on mac only, helps with Safari too
           @supports (-moz-osx-font-smoothing: auto) {
@@ -258,10 +271,10 @@
         width: auto;
         border-radius: 0;
         &::before {
-          padding: 0 $component-margin-xs 0 0;
+          padding: 0 $component-padding-xs 0 0;
         }
         &::after {
-          padding: 0 0 0 $component-margin-xs;
+          padding: 0 0 0 $component-padding-xs;
         }
       }
     }
