--- a/scss/activities/_questionnaire.scss
+++ b/scss/activities/_questionnaire.scss
@@ -122,7 +122,7 @@
       .qn-question {
         padding: 0;
         margin: 0;
-        margin-bottom: 1rem;
+        margin-bottom: $component-margin-bottom-sm;
         background-color:transparent;
         p,
         label {
