--- a/scss/base/_common.scss
+++ b/scss/base/_common.scss
@@ -8,6 +8,7 @@
 //   - %icon-after / Turnitin
 // 2. Image psuedoelements
 //    - %top-bar / Hero
+//    - %border-left-related-info / Moodle Activity Resource Link
 // 3. Links
 //    - %ds-link / Choice, Typography
 //    - %bold-link / File, LTI, URL
@@ -52,7 +53,7 @@
 // extended in Hero
 %top-bar {
   position: relative;
-   &::before {
+  &::before {
     content: "";
     position: absolute;
     top: 0;
@@ -61,6 +62,15 @@
     width: 100%;
     @include bg-colour-opacity($black, 0.25);
     z-index: 0;
+  }
+}
+
+%border-left-related-info {
+  border-left: 3px solid $pearl-grey;
+  padding-left: 0.625rem !important;
+  margin-top: $component-margin-sm;
+  p:last-child {
+    margin-bottom: 0;
   }
 }
 
@@ -110,7 +120,7 @@
   left: auto;
   right: auto;
   width: 100%;
-  padding: 1.25rem 1.5rem;
+  padding: 1.25rem $component-padding;
 }
 
 // extended in Image, LaTeX, Table
@@ -129,7 +139,7 @@
   background-color: $block-background;
   & > :first-child,
   %info-box-inner {
-    padding: 0.5rem 0.25rem 0.5rem 3.125rem;
+    padding: $component-padding-xs 0.25rem $component-padding-xs 3.125rem;
     & > :last-child {
       margin-bottom: 0;
     }
@@ -194,7 +204,7 @@
         & > img,
         & > .filter-ally-wrapper > img {
           border-radius: 50%;
-          height: 75px;
+          height: auto;
           width: 75px;
           margin-right: $component-margin-sm;
         }
@@ -240,7 +250,7 @@
     a {
       @extend %h5;
       margin: 0;
-      padding: 0.5rem 1rem;
+      padding: $component-padding-xs $component-padding-sm;
       color: $midnight-blue;
     }
     &.active {
@@ -266,11 +276,11 @@
   margin-bottom: $component-margin !important;
   border-radius: 0;
   border: none;
-  padding: 0.5rem 0.5rem 0 0.5rem;
+  padding: $component-padding-xs $component-padding-xs 0 $component-padding-xs;
   li {
     background: transparent;
     height: 2.25rem;
-    margin: 0 0.5rem 0.5rem 0;
+    margin: 0 $component-margin-xs $component-margin-xs 0;
     a {
       font-family: "KingsBureauGrot";
       color: $midnight-blue;
