--- a/scss/components/_activitylabel.scss
+++ b/scss/components/_activitylabel.scss
@@ -24,28 +24,24 @@
     width: 5rem;
     height: 1.5rem;
     border-radius: 15px;
-    margin-left: 1rem;
+    margin-left: $component-margin-sm;
     background-color: $block-background;
+  }
+  .group-icon,
+  .media-icon {
+    font-size: 1.25rem;
+    .fas {
+      margin-left: $component-margin-xs;
+      @media only screen and (min-width: $neo-breakpoint) {
+        margin-left: $component-margin-sm;
+      }
+    }
   }
   .group-icon {
     color: $activity-label-orange;
-    font-size: 1.25rem;
-    .fas.fa-user-friends {
-      margin-left: $component-margin-xs;
-      @media only screen and (min-width: $neo-breakpoint) {
-        margin-left: $component-margin-sm;
-      }
-    }
   }
   .media-icon {
     color: $sea-blue;
-    font-size: 1.25rem;
-    .fas.fa-play-circle {
-      margin-left: $component-margin-xs;
-      @media only screen and (min-width: $neo-breakpoint) {
-        margin-left: $component-margin-sm;
-      }
-    }
   }
 }
 // hide label completely for study type activity
@@ -64,7 +60,7 @@
 }
 
 // hide activity labels on specific section pages
-// extended in Home
+// extended in Moodle Activity Resource Link
 %hide-activity-labels {
   li.activity {
     &.type-assessed .activity-label-container {
@@ -74,6 +70,22 @@
     }
     &:not(.type-assessed) .activity-label-container {
       display: none !important;
+    }
+  }
+}
+
+// activity labels for hyperlinks
+a.activity-link {
+  text-decoration: none !important;
+  .activity-title {
+    text-decoration: underline;
+  }
+  .activity-label-container {
+    @extend %activity-label-container-default;
+    .activity-label.assessed {
+      background-color: #60bbba !important;
+      color: $white;
+      width: 5.5rem !important;
     }
   }
 }
