--- a/scss/layout/_navigation.scss
+++ b/scss/layout/_navigation.scss
@@ -39,7 +39,7 @@
     display:inline-block;
     float: none;
     margin: 0;
-    padding-top: 0.5rem !important;
+    padding-top: $component-padding-xs !important;
     padding-bottom: 0 !important;
     font-family: "KingsBureauGrot";
     font-size: 1.25rem !important;
